--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,7 +8,7 @@
       "type": "image/x-icon"
     },
     {
-      "src": "./images/DevFecta.png",
+      "src": "./images/Devfecta.png",
       "type": "image/png",
       "sizes": "512x512"
     }
