--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "private": true,
   "homepage": "/",
   "dependencies": {
+    "@babel/core": ">=7.13.0",
+    "@popperjs/core": "^2.10.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "bootstrap": "^4.5.2",
-    "jquery": "^3.5.1",
-    "popper.js": "^1.16.1",
-    "react": "^17.0.1",
-    "react-dom": "^16.13.1",
-    "react-icons": "^3.11.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.1"
+    "bootstrap": "^5.1.1",
+    "jquery": "^3.6.0",
+    "popper.js": ">=1.16.1",
+    "react": "^17.0.2",
+    "react-bootstrap": "^1.6.3",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "^4.0.3",
+    "typescript": ">=2.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,5 +41,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/bootstrap": "^5.1.4",
+    "@types/jquery": "^3.5.6"
   }
 }
