--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^12.1.0",
     "@testing-library/user-event": "^13.2.1",
     "bootstrap": "^5.1.1",
+    "google-maps-react": "^2.0.6",
     "jquery": "^3.6.0",
     "popper.js": ">=1.16.1",
     "react": "^17.0.2",
