--- a/package.json
+++ b/package.json
@@ -5,22 +5,21 @@
   "homepage": "/",
   "static": "public",
   "dependencies": {
-    "@babel/core": ">=7.13.0",
-    "@popperjs/core": "^2.10.1",
+    "@babel/core": "^7.15.8",
+    "@popperjs/core": "^2.10.2",
     "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.1.0",
-    "@testing-library/user-event": "^13.2.1",
-    "bootstrap": "^5.1.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.4.1",
+    "bootstrap": "^5.1.3",
     "google-maps-react": "^2.0.6",
     "jquery": "^3.6.0",
-    "popper.js": ">=1.16.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.6.3",
+    "react-bootstrap": "^1.6.4",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
-    "typescript": ">=2.8.0"
+    "typescript": "^4.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,7 +44,7 @@
     ]
   },
   "devDependencies": {
-    "@types/bootstrap": "^5.1.4",
-    "@types/jquery": "^3.5.6"
+    "@types/bootstrap": "^5.1.6",
+    "@types/jquery": "^3.5.7"
   }
 }
